2007-02-18  Graham J Lee <leeg@thaesofereode.info>

	* FilesystemLayouts/next: New file.

2007-02-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/tool.make (GNUSTEP_SHARED_BUNDLE_INSTALL_DIR): Install
	tool resources in GNUSTEP_LIBRARY/Tools/Resources.
	($(GNUSTEP_LIBRARY)/Tools): Build this directory instead of
	$(TOOL_INSTALL_DIR)/Resources.
	(internal-tool-install_): Depend on the new rule instead of the
	old one.
	
2007-02-17  Nicola Pero  <nicola.pero@meta-innovation.com>

	* common.make: Added new flag quiet=yes that disables the
	gnustep-make version message.

	* configure.ac: Output GNUMAKE value.
	* configure: Regenerated.
	* empty.make: New file.
	* GNUmakefile.in: Install it.
	* rules.make (print-gnustep-make-objc-flags,
	print-gnustep-make-objc-libs,
	print-gnustep-make-base-libs,
	print-gnustep-make-gui-libs): New targets.
	* gnustep-config.in: New options --objc-flags, --objc-libs,
	--base-libs, --gui-libs that output the flags used for basic ObjC
	compilation and linking on the current platform.

2007-02-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	Added GNUSTEP_ADMIN_APPS and GNUSTEP_ADMIN_TOOLS.
	* common.make: Added GNUSTEP_ADMIN_APPS and GNUSTEP_ADMIN_TOOLS.
	* filesystem.sh.in: Added GNUSTEP_*_ADMIN_APPS and
	GNUSTEP_*_ADMIN_TOOLS.
	* filesystem.csh.in: Same changes.
	* filesystem.make.in: Same changes.
	* GNUstep.config.in: Same changes.
	* configure.ac: Same changes.
	* configure: Regenerated.

	* create_domain_dir_tree.sh: Create the Applications/Admin and
	Tools/Admin/GNUSTEP_TARGET_LDIR directories.
	
	* GNUstep.sh.in: Add each GNUSTEP_*_ADMIN_TOOLS path to PATH, but
	only if we are administrators.  Unset/export GNUSTEP_*_ADMIN_APPS
	and GNUSTEP_*_ADMIN_TOOLS dirs at the end.
	* GNUstep.csh.in: Same changes.
	* GNUstep-reset.sh: Unset GNUSTEP_*_ADMIN_APPS and
	GNUSTEP_*_ADMIN_TOOLS variables.
	* openapp.in: Search for the application in the Admin Apps
	directories as well, but only if we are an Administrator.
