@@ -62,9 +62,9 @@ endif
 # These are the defaults value ... they will be used only if they are
 # not set in the config files (or on the command-line or in
 # environment).
-GNUSTEP_SYSTEM_ROOT = @GNUSTEP_SYSTEM_ROOT@
-GNUSTEP_LOCAL_ROOT = @GNUSTEP_LOCAL_ROOT@
-GNUSTEP_NETWORK_ROOT = @GNUSTEP_NETWORK_ROOT@
+GNUSTEP_SYSTEM_ROOT = @GNUSTEP_SYSTEM_ROOT@$(warning GNUSTEP_SYSTEM_ROOT is deprecated)
+GNUSTEP_LOCAL_ROOT = @GNUSTEP_LOCAL_ROOT@$(warning GNUSTEP_LOCAL_ROOT is deprecated)
+GNUSTEP_NETWORK_ROOT = @GNUSTEP_NETWORK_ROOT@$(warning GNUSTEP_NETWORK_ROOT is deprecated)
 GNUSTEP_USER_DIR = @GNUSTEP_USER_DIR@
 
 # This includes the GNUstep configuration file, but only if it exists
@@ -99,10 +99,10 @@ GNUSTEP_IS_FLATTENED = @GNUSTEP_IS_FLATTENED@
 #
 ifneq ($(filter /%, $(GNUSTEP_USER_DIR)),)
  # Path starts with '/', consider it absolute
- GNUSTEP_USER_ROOT = $(GNUSTEP_USER_DIR)
+ GNUSTEP_USER_ROOT = $(GNUSTEP_USER_DIR)$(warning GNUSTEP_USER_ROOT is deprecated)
 else
  # Path does no start with '/', try it as relative
- GNUSTEP_USER_ROOT = $(GNUSTEP_HOME)/$(GNUSTEP_USER_DIR)
+ GNUSTEP_USER_ROOT = $(GNUSTEP_HOME)/$(GNUSTEP_USER_DIR)$(warning GNUSTEP_USER_ROOT is deprecated)
 endif 
 
 # If multi-platform support is disabled, just use the hardcoded cpu,
